--- a/src/components/GridHeader/GridHeader.css
+++ b/src/components/GridHeader/GridHeader.css
@@ -1,10 +1,3 @@
-.grid-header {
-    height: 8%;
-    padding: 0.5rem;
-    background-color: lightgray;
-    display: flex;
-}
-
 .actions {
     grid-area: actions;
     padding: 8px;
@@ -21,4 +14,13 @@
 
 .dropdown-btn > .ant-dropdown-trigger > span {
     background-color: transparent !important;
+}
+
+.grid-header {
+    background-color: lightgray;
+    display: flex;
+    padding: 0.5rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
 }
