--- a/src/components/ParentGrid.css
+++ b/src/components/ParentGrid.css
@@ -7,75 +7,19 @@
     pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.detailGridcontainer {
+    height: 500px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.panel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.header {
-    background: lightblue;
-    min-height: 50px;
-    height: 100%;
-}
-
-.footer {
-    background: lightblue;
-    height: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: stretch;
-    text-align: center;
-    justify-content: flex-start;
+    flex-flow: nowrap column;
     overflow: hidden;
+    padding: 0.5rem;
 }
 
-.footerArea {
-    flex-grow: 1;
+.container {
+    height: 600px;
     display: flex;
-    min-height: 100px;
-    flex-flow: column;
-    overflow-y: auto;
-}
-
-.footerAreaContent {
-    min-height: 500px;
-}
-
-.footerBottomBar {
-    background: blue;
-    color: white;
-    padding: 10px
+    flex-flow: nowrap column;
+    overflow: hidden;
 }
 
 .body {
@@ -83,56 +27,4 @@
     flex-grow: 3;
     display: flex;
     flex-flow: row nowrap;
-}
-
-.sideBarResizeContainer {
-    width: 30%;
-}
-
-.sidebar {
-    background: lightpink;
-    min-width: 200px;
-    width: 100%;
-    box-sizing: border-box;
-    text-align: center;
-    flex-grow: 1;
-}
-
-
-.withMargin {
-    margin: 10px;
-    box-sizing: border-box;
-}
-
-.content {
-    flex-grow: 2;
-    background: white;
-}
-
-.customHandle {
-    cursor: ew-resize;
-    width: 10px;
-    height: 100px;
-    margin: 0px -5px;
-    background: lightblue;
-    border: 2px solid gray;
-    border-radius: 2px;
-    text-align: center;
-    z-index: 99999;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-}
-
-.customResizeBorder {
-    cursor: ew-resize;
-    width: 5px;
-    background: gray;
-    display: flex;
-    z-index: 99999;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    overflow: visible;
-
 }
